trunk/Archive2/84/826ed994d6c2a5/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:17: warning: unknown escape sequence: '\D' [enabled by default]
  CopyFile(PChar('C:\Datei.dat'), PChar('\\127.45.122.1\Freigabename der Platte\Datei.dat'), true);
                 ^
main.cpp:1:17: warning: character constant too long for its type [enabled by default]
main.cpp:1:40: warning: unknown escape sequence: '\F' [enabled by default]
  CopyFile(PChar('C:\Datei.dat'), PChar('\\127.45.122.1\Freigabename der Platte\Datei.dat'), true);
                                        ^
main.cpp:1:40: warning: unknown escape sequence: '\D' [enabled by default]
main.cpp:1:40: warning: character constant too long for its type [enabled by default]
main.cpp:1:10: error: expected constructor, destructor, or type conversion before ‘(’ token
  CopyFile(PChar('C:\Datei.dat'), PChar('\\127.45.122.1\Freigabename der Platte\Datei.dat'), true);
          ^
