trunk/Archive2/84/826ed994d6c2a5/main.cpp
 CopyFile(PChar('C:\Datei.dat'), PChar('\\127.45.122.1\Freigabename der Platte\Datei.dat'), true);